--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
           <img src="images/projects/1.jpg" class="card-img-top" alt="RAG-powered Reference Explorer">
           <div class="card-body">
             <h5 class="card-title"> RAG-powered Reference Explorer</h5>
-            <p class="card-text description">The AI Chatbot for Citation of Custom PDFs, Reports, and Guidelines 📄🤖 is an innovative repository that leverages the power of Retrieval-Augmented Generation (RAG) 🔍📚 to provide instant answers and references from a curated directory of PDFs 📁. Let's Go! 🚀<br> </br><br></p>
+            <p class="card-text description">The AI Chatbot for Citation of Custom PDFs, Reports, and Guidelines 📄🤖 is an innovative repository that leverages the power of Retrieval-Augmented Generation (RAG) 🔍📚 to provide instant answers and references from a curated directory of PDFs 📁. Let's Go! 🚀<br> </br></p>
             <a href="https://github.com/Morikashi/RAG-powered-Reference-Explorer"><img src="images/projects/github.jpg" alt="GitHub Icon" class="github-icon"></a>
           </div>
         </div>
