--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
           </div>
         </div>
         <div class="skill">
-          <img src="images/skills/Java_Logo.png" alt="Java">
+          <img src="images/skills/java_logo.png" alt="Java">
           <div class="progress">
             <div class="progress-bar bg-primary" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">Java - 80%</div>
           </div>
