--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           <img src="images/projects/2.jpg" class="card-img-top" alt="Gen-AI Teaching Assistant">
           <div class="card-body">
             <h5 class="card-title">Gen-AI Teaching-Assistant</h5>
-            <p class="card-text description">Applied Large Language Models as TA for your class assignments 📝📚. The AI-Powered Teaching Assistant is an innovative application designed to enhance the learning experience by automatically summarizing lecture recordings and generating quizzes to reinforce understanding 🎓. Let's Get Started! 🚀<br> </br></p>
+            <p class="card-text description">Applied Large Language Models as TA for your class assignments 📝📚. The AI-Powered Teaching Assistant is an innovative application designed to enhance the learning experience by automatically summarizing lecture recordings and generating quizzes to reinforce understanding 🎓. Let's Started! 🚀<br> </br></p>
             <a href="https://github.com/Morikashi/Gen-AI-Teaching-Assistant"><img src="images/projects/github.jpg" alt="GitHub Icon" class="github-icon"></a>
           </div>
         </div>
