--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     /* Additional CSS for Skills Section */
     .skills-section {
       background-color: #85c1e9;
-      color: #34495e;
+      color: #34495f;
       padding-top: 100px; /* Add padding to top and bottom */
     }
     .skills-section h2 {
