--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
  
     .certifications-section {
     background-color: #e8f6f3;
-    color: #34495e;
+    color: #34495f;
     padding-top: 100px; /* Add padding to top and bottom */
 
 }
