--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 <!-- Contact Me Section -->
   <section id="contact-me" class="contact-me">
     <div class="container">
-      <img src="images/profile/profile.jpg" alt="Profile Picture">
+      <img src="images/profile/profile.png" alt="Profile Picture">
       <h1>Morteza Kashani</h1>
       <h2>Generative AI Student Researcher</h2>
       <div class="social-icons">
