--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
       <h1>Morteza Kashani</h1>
       <h2>Generative AI Student Researcher</h2>
       <div class="social-icons">
-        <a href="mailto:kashimorteza00@gmail.com"><img src="images/icons/mail_icon.png" alt="Email Icon"></a>
+        <a href="mailto:morteza.afife@sharif.edu"><img src="images/icons/mail_icon.png" alt="Email Icon"></a>
         <a href="https://www.linkedin.com/in/morteza-k"><img src="images/icons/linkedin_icon.png" alt="LinkedIn Icon"></a>
         <a href="https://github.com/Morikashi"><img src="images/icons/github_icon.png" alt="GitHub Icon"></a>
         <a href="https://drive.google.com/file/d/191Vd9VhUN_tt3UQrExLRv8hYmRUr-G6r/view?usp=drive_link"><img src="images/icons/CV_icon.png" alt="CV Icon"></a>
