--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         <a href="mailto:morteza.afife@sharif.edu"><img src="images/icons/mail_icon.png" alt="Email Icon"></a>
         <a href="https://www.linkedin.com/in/morteza-k"><img src="images/icons/linkedin_icon.png" alt="LinkedIn Icon"></a>
         <a href="https://github.com/Morikashi"><img src="images/icons/github_icon.png" alt="GitHub Icon"></a>
-        <a href="https://drive.google.com/file/d/191Vd9VhUN_tt3UQrExLRv8hYmRUr-G6r/view?usp=drive_link"><img src="images/icons/CV_icon.png" alt="CV Icon"></a>
+        <a href="https://github.com/Morikashi/morikashi.github.io/blob/main/CV_Morteza_A.%20Kashani.pdf"><img src="images/icons/CV_icon.png" alt="CV Icon"></a>
         <a href="https://www.kaggle.com/datasets/morkashi"><img src="images/icons/kaggle_icon.png" alt="Kaggle Icon"></a>
       </div>
     </div>
@@ -602,7 +602,7 @@
             <div class="col-md-8">
               <h3 class="text-white">University of Amsterdam</h3>
               <h4 class="text-white">Research Assistant</h4>
-              <p class="text-white">Nov 2023 - Jul 2024</p>
+              <p class="text-white">January 2023 - March 2024</p>
               <p class="text-white">I have been focusing on applying Large Language Models for the reranking stage of documents in information retrieval systems. This includes the development and fine-tuning of transformer-based models to enhance retrieval precision. Additionally, I conducted extensive experiments to evaluate model performance, using different methods for Query Performance Prediction (QPP).</p>
             </div>
           </div>
