--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         <a href="mailto:morteza.afife@sharif.edu"><img src="images/icons/mail_icon.png" alt="Email Icon"></a>
         <a href="https://www.linkedin.com/in/morteza-k"><img src="images/icons/linkedin_icon.png" alt="LinkedIn Icon"></a>
         <a href="https://github.com/Morikashi"><img src="images/icons/github_icon.png" alt="GitHub Icon"></a>
-        <a href="https://github.com/Morikashi/morikashi.github.io/blob/main/CV_Morteza_A.%20Kashani.pdf"><img src="images/icons/CV_icon.png" alt="CV Icon"></a>
+        <a href="docs/CV_Morteza_A. Kashani.pdf"><img src="images/icons/CV_icon.png" alt="CV Icon"></a>
         <a href="https://www.kaggle.com/datasets/morkashi"><img src="images/icons/kaggle_icon.png" alt="Kaggle Icon"></a>
       </div>
     </div>
